force-app/main/default/objects/Class__c/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <label>Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RAJ</fullName>
            </value>
            <value>
                <fullName>CBSE</fullName>
            </value>
            <value>
                <fullName>BIHAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>