force-app/main/default/objects/Class__c/fields/Calss_Teachers__c.field-meta.xml
<CustomField>
    <fullName>Calss_Teachers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Teacher</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>