force-app/main/default/objects/Class__c/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <label>Detailed Description</label>
    <type>TextArea</type>
</CustomField>