force-app/main/default/objects/Class__c/fields/Max_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Size__c</fullName>
    <label>Max Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>