force-app/main/default/objects/Class__c/fields/My_Count__c.field-meta.xml
<CustomField>
    <fullName>My_Count__c</fullName>
    <label>My Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>