force-app/main/default/objects/Class__c/fields/Number_of_student__c.field-meta.xml
<CustomField>
    <fullName>Number_of_student__c</fullName>
    <label>Number of students</label>
    <summaryForeignKey>student__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>