force-app/main/default/objects/Class__c/listViews/Name.listView-meta.xml
<ListView>
    <fullName>Name</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Name</label>
</ListView>