force-app/main/default/objects/Class__c/listViews/Students_Count.listView-meta.xml
<ListView>
    <fullName>Students_Count</fullName>
    <columns>NAME</columns>
    <columns>Number_of_student__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_of_student__c</field>
        <operation>greaterOrEqual</operation>
        <value>2</value>
    </filters>
    <label>Students Count</label>
</ListView>